--- a/boot-menu-dell-inspiron-5547/attribution.yaml
+++ b/boot-menu-dell-inspiron-5547/attribution.yaml
@@ -1,8 +1,8 @@
 attribution:
-- author: Dell
-  author-site: https://www.dell.com/
-  license: Public domain
-  license-url: https://en.wikipedia.org/wiki/Public_domain
-  permalink: https://commons.wikimedia.org/wiki/File:Dell_Logo.svg
-  permalink-date: '2019-06-06'
-  title: Dell Logo.svg
+  - author: Dell
+    author-site: https://www.dell.com/
+    license: Public domain
+    license-url: https://en.wikipedia.org/wiki/Public_domain
+    permalink: https://commons.wikimedia.org/wiki/File:Dell_Logo.svg
+    permalink-date: "2019-06-06"
+    name: Dell Logo.svg
