--- a/show-pdf-from-github/attribution.yaml
+++ b/show-pdf-from-github/attribution.yaml
@@ -1,16 +1,16 @@
 attribution:
-- author: GitHub
-  author-site: https://github.com
-  comment: Use the Octocat or GitHub logo in a blog post or news article about GitHub
-  license: ''
-  license-url: https://github.com/logos
-  permalink: https://github.com/logos
-  permalink-date: '2019-03-18'
-  title: GitHub Logo
-- author: WordPress
-  author-site: https://wordpress.org/
-  license: GNU General Public License
-  license-url: https://en.wikipedia.org/wiki/GNU_General_Public_License
-  permalink: https://commons.wikimedia.org/wiki/File:Wordpress-Logo.svg
-  permalink-date: '2019-03-17'
-  title: Wordpress-Logo.svg
+  - author: GitHub
+    author-site: https://github.com
+    comment: Use the Octocat or GitHub logo in a blog post or news article about GitHub
+    license: ""
+    license-url: https://github.com/logos
+    permalink: https://github.com/logos
+    permalink-date: "2019-03-18"
+    name: GitHub Logo
+  - author: WordPress
+    author-site: https://wordpress.org/
+    license: GNU General Public License
+    license-url: https://en.wikipedia.org/wiki/GNU_General_Public_License
+    permalink: https://commons.wikimedia.org/wiki/File:Wordpress-Logo.svg
+    permalink-date: "2019-03-17"
+    name: Wordpress-Logo.svg
