--- a/how-download-from-github/attribution.yaml
+++ b/how-download-from-github/attribution.yaml
@@ -2,8 +2,7 @@ attribution:
   - author: GitHub
     author-site: https://github.com
     comment: Use the Octocat or GitHub logo in a blog post or news article about GitHub
-    license: ""
     license-url: https://github.com/logos
     permalink: https://github.com/logos
-    permalink-date: "2019-03-18"
+    permalink-date: 2019-03-18
     name: GitHub Logo
