--- a/install-eclipse-java/attribution.yaml
+++ b/install-eclipse-java/attribution.yaml
@@ -4,5 +4,5 @@ attribution:
     license: Public domain
     license-url: https://en.wikipedia.org/wiki/Public_domain
     permalink: https://commons.wikimedia.org/wiki/File:Eclipse-Luna-Logo.svg
-    permalink-date: "2019-06-07"
+    permalink-date: 2019-06-07
     name: Eclipse-Luna-Logo.svg
