--- a/color-in-dell-inspiron-5547/attribution.yaml
+++ b/color-in-dell-inspiron-5547/attribution.yaml
@@ -4,5 +4,5 @@ attribution:
     license: Public domain
     license-url: https://en.wikipedia.org/wiki/Public_domain
     permalink: https://commons.wikimedia.org/wiki/File:Dell_Logo.svg
-    permalink-date: "2019-06-06"
+    permalink-date: 2019-06-06
     name: Dell Logo.svg
