--- a/save-from-qtableview-to-csv/attribution.yaml
+++ b/save-from-qtableview-to-csv/attribution.yaml
@@ -4,5 +4,5 @@ attribution:
     license: Public domain
     license-url: https://en.wikipedia.org/wiki/Public_domain
     permalink: https://ru.wikipedia.org/wiki/%D0%A4%D0%B0%D0%B9%D0%BB:CSV_Logo.svg
-    permalink-date: "2019-03-24"
+    permalink-date: 2019-03-24
     name: CSV Logo.svg
